[gd_scene load_steps=2 format=3 uid="uid://d2hbtfrwgmiuo"]

[ext_resource type="Script" uid="uid://ceyagon8ptsjk" path="res://script/UI/crafting_quantity_panel.gd" id="1_tyjst"]

[node name="CraftingQuantityPanel" type="Control"]
custom_minimum_size = Vector2(400, 300)
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tyjst")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
theme_override_constants/separation = 10
alignment = 1

[node name="ItemNameLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Chế tạo [Tên Vật Phẩm]"
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuantityLabel" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Số lượng: 1"

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="QuantitySlider" type="HSlider" parent="PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
min_value = 1.0
value = 1.0

[node name="MaxButton" type="Button" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2
text = "Max"

[node name="MaterialsLabel" type="RichTextLabel" parent="PanelContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 120)
layout_mode = 2
autowrap_mode = 2

[node name="ButtonContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="ConfirmButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Chế Tạo"

[node name="CancelButton" type="Button" parent="PanelContainer/VBoxContainer/ButtonContainer"]
layout_mode = 2
text = "Hủy bỏ"
